--- a/style.css
+++ b/style.css
@@ -1,25 +1,105 @@
-h2 {
-  font-family:arial;
+*{
+  margin: auto;
 }
 
-form {
+body{
+  background-color: #DDF1FC;
+}
+
+#header{
+  font-family: 'Open Sans', sans-serif;
+  text-align: center;
+}
+
+#add {
+  position:relative;
+  font-family:'Open Sans', sans-serif;
+  width: 12%;
+}
+
+form, #button{
   display: inline-block;
+}
+
+input[type="text"]{
+  border: 3px solid #07A35F;
+  width: 175px;
+  height: 20px;
+  background: #fff;
+  font-style: italic;
 }
 
 #button{
-  display: inline-block;
-  height:20px;
-  width:70px;
-  background-color:#cc0000;
-  font-family:arial;
-  font-weight:bold;
-  color:#ffffff;
-  border-radius: 5px;
-  text-align:center;
-  margin-top:2px;
+  background-color: #4285F4;
+  height: 27px;
+  padding-left: 5px;
+  padding-right: 5px;
+  color: #fff;
 }
 
 .list {
-  font-family:garamond;
-  color:#cc0000;
+  width: 500px;
+  height: 700px;
+  border-style: solid;
+  border-color: #4285F4;
+  background-color: #fff;
 }
+
+.item{
+  font-family: 'Raleway', sans-serif;
+  font-weight: bold;
+  text-align: center;
+  vertical-align: middle;
+  border-style: solid;
+  border-color: #07A35F;
+  border-width: 2px;
+  width: 450px;
+  height: 35px;
+  margin-top: 8px;
+  margin-bottom: 8px;
+}
+
+#remove-instruct{
+  font-family: 'Open Sans', sans-serif;
+  color: #606060;
+  font-style: italic;
+  text-align: center;
+  margin-top: 60%;
+  /* Makes text unselectable */
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+
+#footer{
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 40px;
+  background-color: #333333;
+}
+
+#view-github{
+  margin-left: 860px;
+}
+
+#view-github img{
+  padding-top: 4px;
+}
+
+#view-github a{
+  color: #fff;
+  text-align: center;
+  vertical-align: middle;
+  font-family: 'Open Sans', sans-serif;
+  text-decoration: none;
+  padding-bottom: 22px;
+}
+
+/*
+font-family: 'Open Sans', sans-serif;
+font-family: 'Raleway', sans-serif;
+*/
