--- a/style.css
+++ b/style.css
@@ -7,8 +7,16 @@ body{
 }
 
 #header{
+  background-color: #333333;
+  width: 100%;
+  height: 60px;
+}
+
+#header h1{
   font-family: 'Open Sans', sans-serif;
   text-align: center;
+  color: #fff;
+  padding-top: 5px;
 }
 
 #add {
